crates/cli/tests/snapshots/project_test__advanced_config.snap
---
source: crates/cli/tests/project_test.rs
expression: assert.output()
---
About ─────────────────────────────────────────────────────────────────────

  Project: advanced
  Source: advanced
  Toolchains: node, typescript
  Language: typescript
  Stack: frontend
  Type: application
  Depends on: —

Configuation ──────────────────────────────────────────────────────────────

  Inherits from:
    - .moon/tasks.yml
  Tags:
    - react
  Environment variables: —

File groups ───────────────────────────────────────────────────────────────

  sources:
    - advanced/src/**/*
    - advanced/types/**/*
  tests:
    - advanced/tests/**/*
