crates/cli/tests/snapshots/project_test__depends_on_paths.snap
---
source: crates/cli/tests/project_test.rs
expression: assert.output_standardized()
---
About ──────────────────

  Project: foo
  Source: deps/foo
  Toolchain: javascript
  Language: javascript
  Stack: unknown
  Layer: application
  Depends on:
    - baz (production)
    - bar (production)

Configuration ──────────

  Inherits from:
    - .moon/tasks.yml
  Tags:
    - react
  Environment variables: —

File groups ────────────

  sources:
    - deps/foo/src/**/*
    - deps/foo/types/**/*
  tests:
    - deps/foo/tests/**/*
