crates/cli/tests/snapshots/project_test__empty_config.snap
---
source: crates/cli/tests/project_test.rs
expression: assert.output()
---
 EMPTYCONFIG 

Project: emptyConfig
Source: empty-config
Toolchain: system
Language: unknown
Stack: unknown
Type: unknown

 INHERITS FROM 

  - .moon/tasks.yml

 FILE GROUPS 

sources:
  - empty-config/src/**/*
  - empty-config/types/**/*
tests:
  - empty-config/tests/**/*
