crates/cli/tests/snapshots/project_test__no_config.snap
---
source: crates/cli/tests/project_test.rs
expression: assert.output()
---
 NOCONFIG 

Project: noConfig
Source: no-config
Toolchains: system
Language: unknown
Stack: unknown
Type: unknown

 INHERITS FROM 

  - .moon/tasks.yml

 FILE GROUPS 

sources:
  - no-config/src/**/*
  - no-config/types/**/*
tests:
  - no-config/tests/**/*
