crates/cli/tests/snapshots/project_test__root_level.snap
---
source: crates/cli/tests/project_test.rs
expression: assert.output()
---
About ──────────────────

  Project: root
  Alias: test-cases
  Source: .
  Toolchains: node, typescript
  Language: typescript
  Stack: unknown
  Type: unknown
  Depends on: —

Configuration ──────────

  Inherits from:
    - .moon/tasks.yml
  Tags: —
  Environment variables: —

Tasks ──────────────────

  noop:
    › noop
  oneOff:
    › echo root-one-off
