crates/cli/tests/snapshots/project_test__unknown_project.snap
---
source: crates/cli/tests/project_test.rs
expression: get_assert_stderr_output(&assert.inner)
---
Error: project_graph::unknown_project

  × No project has been configured with the ID unknown.



